# meeting-scribe

./: .gitignore  CLAUDE.md  README.md
.specs/diarization-accuracy/: design.md  requirements.md  tasks.md
docs/: DIARIZATION.md
docs/design/redesign-2026-07/: DESIGN-HANDOFF.md  DESIGN-MANIFEST.json  components.html  critique.json  index.html  meeting-empty.html  meeting-scribe-hyperframes.html  meeting.html  recording.html  settings.html
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/migrations/: 20260716000000_add_diarization_speakers.sql  20260716010000_add_speaker_identity_fields.sql  20260717000000_add_cli_agent_config.sql
frontend/src-tauri/src/: lib.rs
frontend/src-tauri/tests/: diarization_accuracy.rs  diarization_fixtures.rs
frontend/src/app/: page.tsx  (+1 more)
scratch/cli-spike/: .gitignore  make_transcripts.py  summary_instruction.txt  timeout.sh  transcript_large.txt  transcript_normal.txt
scratch/diarization-spike/: .gitignore  Cargo.toml  download_models.sh  make_audio.py
scratch/diarization-spike/src/: main.rs
tasks/: README.md
tasks/cli-summary/: C1-resultados.md  C1-spike-clis.md  C2-backend-provedor-cli.md  C3-ui-settings-e-validacao.md
tasks/diarization/: D1-resultados.md  D1-spike-modelos.md  D2-trilhas-separadas.md  D3-engine-e-pos-processamento.md  D4-cadastro-de-pessoas.md  D5-ui-de-falantes.md
tasks/organization/: O1-pastas-de-reunioes.md  O2-titulo-com-data-e-assunto.md
tasks/redesign/: R1-fundacao-tokens-componentes-shell.md  R2-tela-nova-reuniao.md  R3-tela-detalhes-da-reuniao.md  R4-tela-configuracoes.md
(+79 files in other folders)
